[package]
name = "cashaccount-sys"
version = "0.1.0"
authors = ["Dagur Valberg Johannsson <dagurval@pvv.ntnu.no>"]
edition = "2018"
build = "build.rs"
description = "Library for working with Cash Accounts. Cash Accounts is a a naming system for sharing bitcoin payment information."
license = "MIT"

[build-dependencies]
bindgen = ">=0.47.0"
cc = "1.0"
